<resources>
    <string name="app_name" translatable="false">Zamin</string>
    <string name="menu_news_feed">Lenta</string>
    <string name="menu_top">Top</string>
    <string name="menu_favourites">Tanlanganlar</string>
    <string name="menu_media">Media</string>
    <string name="text_news">Yangiliklar</string>
    <string name="text_choose_language">Tilni tanlang</string>
    <string name="text_back">Ortga</string>
    <string name="text_submit">Tanlash</string>
    <string name="message_no_connection">Internet bilan bog\'lanish mavjud emas</string>
    <string name="title_audio_news">Audio xabarlar</string>
    <string name="messege_audio">O\'zbekistonda va jahonda bo\'layotgan voqealarning audio xabarlari</string>
    <string name="title_favourites">Sizning xabarlaringiz</string>
    <string name="message_favourites">Zamin siz uchun muhim xabarlarni saqlab turadi</string>
    <string name="title_foto">Foto kolleksiya</string>
    <string name="message_foto">O\'zbekistonda va jahonda bo\'layotgan voqealarning foto jamlanmasi</string>
    <string name="text_last_news">So\'nggi yangiliklar</string>
    <string name="text_main_news">Asosiy yangiliklar</string>
    <string name="text_audio_news2">Audio yangiliklar</string>
    <string name="text_all">Barchasi</string>
    <string name="text_video_news">Video yangiliklar</string>
    <string name="title_video_news">Video xabarlar</string>
    <string name="message_video">Zamin studiyasining dolzarb mavzudagi intervyulari</string>
    <string name="tab_audio">Audio</string>
    <string name="tab_video">Video</string>
    <string name="tab_gallery">Galereya</string>
    <string name="toolbar_profile">Profil</string>
    <string name="text_notification">Bildirishlar</string>
    <string name="text_categories">Ruknlar</string>
    <string name="text_select_language">Tilni tanlash</string>
    <string name="language">O\'zbek</string>
    <string name="text_results">qidiruv natijalari</string>
    <string name="title_select_categories">Kategoriyalarni tanlang</string>
    <string name="today">Bugun</string>
    <string name="text_share">Yangilikni ulashish</string>
    <string name="text_no_connection">Tilni o\'zgartirish uchun internetga ulaning</string>
    <string name="check_the_connection">Internetga ulanganingizni tekshirib ko\'ring</string>
    <string name="text_no_favourites">Saqlangan xabarlar topilmadi</string>
    <string name="text_no_audio">Audio xabarlar topilmadi</string>
    <string name="text_registration">Ro\'yxatdan o\'tish</string>
    <string name="text_no_items">Yangiliklar topilmadi</string>
    <string name="text_refresh">Takrorlash</string>
    <string name="toast_login_disabled">Ro\'yxatdan o\'tishning iloji yo\'q</string>
    <string name="text_reset_alert_title">Barcha o\'zgarishlarni bekor qilmoqchimisiz</string>
    <string name="text_reset_alert_message">ortga qaytishning iloji bo\'lmaydi</string>
    <string name="text_yes">Ha</string>
    <string name="text_clear_cache">Clear cache</string>

</resources>
