<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_margin="16dp"
        android:background="@color/transparent"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_select_language"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/text_choose_language"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/language_lt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/custom_ripple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/flag_uz" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16sp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="4dp"
                    android:text="O'zbek lotin"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation_uz"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    app:lottie_fileName="check_anim.json" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/language_kr"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/custom_ripple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/flag_uz" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16sp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="4dp"
                    android:text="Узбек кирил"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation_kr"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    app:lottie_fileName="check_anim.json" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_back"
                    android:textAllCaps="false"
                    android:textColor="#949494"
                    android:textSize="16sp" />

                <Button
                    android:layout_marginEnd="8dp"
                    android:id="@+id/btn_submit"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_submit"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
