<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_category"
                tools:listitem="@layout/item_news_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/text_main_news"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/text_main_news"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />

            <edu.azimjon.project.zamin.views.HeightWrappingViewPager
                android:id="@+id/main_news_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

            </edu.azimjon.project.zamin.views.HeightWrappingViewPager>

            <LinearLayout
                android:id="@+id/main_news_dots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="12dp"
                    android:layout_height="4dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/dots_inactive" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="4dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/dots_active" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="4dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/dots_inactive" />

            </LinearLayout>

            <WebView
                android:id="@+id/ad_web_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="none" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/text_last_news"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="#e5e5e5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/text_last_news"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/text_last_news"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/text_last_news"
                    android:layout_marginTop="12dp"
                    android:background="#e5e5e5" />


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_last_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/audio_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:id="@+id/text_audio_news"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:text="@string/text_audio_news2"
                        android:textColor="#757575"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/clicker_all_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/custom_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:text="@string/text_all"
                        android:textColor="#d32f2f"
                        android:textSize="17sp"
                        android:translationZ="2dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/text_audio_news"
                        android:layout_marginTop="12dp"
                        android:background="#e5e5e5" />


                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_audio_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/video_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:id="@+id/text_video_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_video_news"
                        android:textColor="#757575"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/clicker_all_video"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/custom_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:text="@string/text_all"
                        android:textColor="#d32f2f"
                        android:textSize="17sp"
                        android:translationZ="2dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/text_video_news"
                        android:layout_marginTop="12dp"
                        android:background="#e5e5e5" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_video_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <WebView
                android:id="@+id/ad_web_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="none" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/text_last_news"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="#e5e5e5" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
